完成静态页,限时抢购,爆款好物,晴妈推荐,商品详情页

--- a/manifest.json
+++ b/manifest.json
@@ -64,7 +64,12 @@
             "postcss" : true,
             "minified" : true
         },
-        "usingComponents" : true
+        "usingComponents" : true,
+        "permission" : {
+            "scope.userLocation" : {
+                "desc" : ""
+            }
+        }
     },
     "mp-alipay" : {
         "usingComponents" : true
