--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-    "name" : "tongxin_mini",
+    "name" : "tongchuang_mini",
     "appid" : "__UNI__10BD1C1",
     "description" : "",
     "versionName" : "1.0.0",
